# solstice

./: .dockerignore  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  =0.22.0  =1.17.0  API_KEY_CONFIGURATION.md  CDC Influenza vaccines_extracted.json  CDC_no_overlaps.json  DATA_STORAGE_ARCHITECTURE.md  DEFAULT_TEXT_PROCESSING.md  DPI_HANDLING_GUIDE.md  FACT_CHECK_LOGICAL_ISSUES.txt  FACT_CHECK_NORMALIZATION_CLEANUP.md  FLEXIBLE_READER_DESIGN.md  GATEWAY_LOGICAL_ISSUES.txt  IMAGE_HANDLING_STRATEGY.md  INGESTION_AUDIT.md  INGESTION_FACT_CHECK_ANALYSIS.md  INJESTION_ANALYSIS.md  INJESTION_LOGICAL_ISSUES.txt  LAYOUT_PARSER_SETUP.md  Liu et al. (2024)_extracted.json  Liu_advanced_order.json  Liu_banded_order.json  Liu_final_clean.json  Liu_final_simple.json  Liu_semantic_order.json  Liu_simple_order.json  Liu_simple_x1_order.json  Makefile  PUBLIC_INTERFACE_DESIGN.md  PUBLIC_INTERFACE_SPEC.md  README.md  SYMSPELL_PERFORMANCE_SUMMARY.md  SYMSPELL_SOLUTION.md  TEXT_PIPELINE_REFACTOR_PLAN.md  Treanor et al. (2011)_extracted.json  VISION_AGENT_INTERFACE.md  (+158 more)
.internal_docs/: doc1.txt
all_pages_weighted_visualization/: summary.json
approach_comparison/: approach_analysis.json
caption_association_results/: caption_analysis.json
conflict_resolution_results/: conflict_analysis.json
data/: README.md
data/claims/: Flublok_Claims.json
data/docs/: 77a56d35.json  8631aff7.json  d7eb6c59.json  eb842dc7.json
data/studies/: .consolidated_results.json.swp  consolidated_results.json  consolidated_results_refactored.json  consolidated_summary.json  study_report.md  study_results_20250728_143121.json  study_results_20250728_143303.json  study_results_20250728_145338.json  study_results_20250728_150045.json  study_results_20250728_150110.json  study_results_20250728_164206.json  study_results_20250728_170338.json  study_results_20250728_170414.json  study_results_20250728_170426.json  study_results_20250728_170436.json  study_results_20250728_172400.json  study_results_20250728_172453.json  study_results_20250728_174233.json  study_results_20250728_180205.json  study_results_20250728_180316.json  study_results_20250728_180322.json  study_results_20250728_180330.json  study_results_20250728_180335.json  study_results_20250728_180756.json  study_results_20250728_181053.json  study_results_20250728_181108.json  study_results_20250728_181227.json  study_results_20250728_181427.json  study_results_20250728_181617.json  study_results_20250728_181844.json  study_results_20250728_182036.json  study_results_20250728_183055.json  study_results_20250728_183339.json  study_results_20250728_184238.json  study_results_20250728_185035.json  study_results_20250728_185406.json  study_results_20250728_201632.json  study_results_20250728_201749.json  study_results_20250729_041917.json  study_results_20250729_042316.json  (+20 more)
docker/: gateway.Dockerfile
docs/: 00_project_overview.md  01_installation.md  detectron2-installation.md  installation.md
docs/writeup/: .gitignore  (+4 more)
examples/: evidence_extraction_example.sh  extract_evidence_defaults.sh  fact_check_example.py  run_study_example.sh  test_complete_pipeline.py
layout_visualizations/: index.html
output/: results.json
scripts/: check_gateway_health.py  check_sdk_compatibility.py  install-detectron2.sh  probe_responses_api.py  send_prompt_via_gateway.py  setup.sh  start-dev.sh  test-fact-checker.sh  test-gateway.sh  test_responses_gateway.py  validate_responses_api.sh
simple_merging_results/: merging_results.json
src/: README.md  test_marketing.py
tests/: test_dpi_consistency.py  test_gateway.py  test_openai_integration.py  test_openai_real.py  test_text_processing_service.py  test_text_processing_service_refactor.py
unified_documents/: index.html  search.js  style.css
weighted_resolution_results/: weighted_analysis.json
weighted_results_all_pages/: all_pages_analysis.json
writeup/: .gitignore  Makefile  solstice.tex  stats.tex
(+3978 files in other folders)
